--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Sass</title>
 </head>
 <body>
     <h1>Hola mundo</h1>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel omnis qui aliquid nostrum! Quibusdam quisquam vitae, deserunt iusto sapiente et maxime nemo esse porro nisi, delectus est nostrum, ipsa minus.</p>
+    </div>
+    <p>otra</p>
 </body>
 </html>
